--- a/values-with-load-balancer.yaml
+++ b/values-with-load-balancer.yaml
@@ -46,7 +46,7 @@ external:
   # service.beta.kubernetes.io/openstack-internal-load-balancer: “true”
   dns:
     useInternal: false
-    useExternal: false
+    useExternal: true
   # create an A record for each statefulset pod
   distinct: false
   servicePort: 19092
@@ -65,9 +65,7 @@ external:
 ## ref: https://kafka.apache.org/documentation/#brokerconfigs
 ##
 configurationOverrides:
-  "offsets.topic.replication.factor": 1
   "confluent.support.metrics.enable": false  # Disables confluent metric submission
-  "auto.leader.rebalance.enable": true
 
   ## Options required for external access via NodePort
   ## ref:
@@ -84,6 +82,4 @@ configurationOverrides:
   ## If external service type is LoadBalancer and distinct is false:
   "advertised.listeners": EXTERNAL://${LOAD_BALANCER_IP}:31090
   "listener.security.protocol.map": PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-  "listeners": PLAINTEXT://:9092,EXTERNAL://:31090
-  "inter.broker.listener.name": "PLAINTEXT"
 
